[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Time Won.otf" type="DynamicFontData" id=2]
[ext_resource path="res://MainUITheme.tres" type="Theme" id=3]
[ext_resource path="res://audiNumbers.png" type="Texture" id=4]
[ext_resource path="res://ponteiro.png" type="Texture" id=5]
[ext_resource path="res://contaGiro.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
timeManager = NodePath("../TrackManager")

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 150.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = -25.0
custom_fonts/font = SubResource( 1 )
text = "Time"
valign = 1
uppercase = true

[node name="Label2" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 50.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Time"
valign = 1
uppercase = true

[node name="Label3" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 100.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Time"
valign = 1
uppercase = true

[node name="contaGiro" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -194.0
margin_top = -194.0
rect_pivot_offset = Vector2( 1, 1 )
texture = ExtResource( 4 )
expand = true
script = ExtResource( 6 )

[node name="ponteiro" type="TextureRect" parent="contaGiro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 194.0
rect_scale = Vector2( 0.45, 0.45 )
rect_pivot_offset = Vector2( 25, 25 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Gear" type="Label" parent="."]
anchor_left = 0.849
anchor_top = 1.0
anchor_right = 0.849
anchor_bottom = 1.0
margin_left = -243.72
margin_top = -100.0
margin_right = -46.7201
custom_fonts/font = SubResource( 2 )
text = "Gear: 1"

[node name="PausePanel" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="Continue" type="Button" parent="PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -85.0
margin_right = 127.0
margin_bottom = -43.0
text = "Continuar"

[node name="MainMenu" type="Button" parent="PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = 42.0
margin_right = 127.0
margin_bottom = 84.0
text = "Voltar para o Menu"

[connection signal="pressed" from="PausePanel/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PausePanel/MainMenu" to="." method="_on_MainMenu_pressed"]
